--- a/deployment/kcarchive.conf
+++ b/deployment/kcarchive.conf
@@ -11,7 +11,7 @@ server {
 
 	location /media {
 		access_log off;
-		root /var/www/KCArchive;
+		root /var/www/KCArchive/instance;
 		default_type image/png;
 		expires max;
 	}
@@ -31,4 +31,5 @@ server {
 	location / {
 		include uwsgi_params;
 		uwsgi_pass localhost:3031;
+	}
 }
