--- a/deployment/requirements.txt
+++ b/deployment/requirements.txt
@@ -1,10 +1,10 @@
 alembic==1.4.3
-bleach==3.1.5
+bleach==3.3.0
 cachelib==0.1.1
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
-Flask==1.1.2
+Flask==2.0.1
 Flask-BasicAuth==0.2.0
 Flask-Caching==1.10.0
 Flask-Migrate==2.5.3
@@ -12,17 +12,17 @@ Flask-Session==0.3.2
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-lxml==4.5.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
 Mako==1.1.3
-MarkupSafe==1.1.1
+MarkupSafe==2.0.1
 packaging==20.4
 pkg-resources==0.0.0
 psycopg2-binary==2.8.6
 pyparsing==2.4.7
 python-dateutil==2.8.1
 python-editor==1.0.4
+redis==3.5.3
 requests==2.24.0
 six==1.15.0
 soupsieve==2.0.1
@@ -31,5 +31,5 @@ tqdm==4.50.2
 urllib3==1.25.10
 uWSGI==2.0.19.1
 webencodings==0.5.1
-Werkzeug==1.0.1
+Werkzeug==2.0.1
 WTForms==2.3.3
